--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>decalife</title>
+    <title>DecaLife - 拾光胶囊</title>
+    <!-- 引入 Noto Serif SC 字体 -->
+    <link href="[https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@400;700;900&display=swap](https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@400;700;900&display=swap)" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
