--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                             onClick={handleStart}
                             className="w-full bg-gray-900 hover:bg-black text-white font-bold py-3.5 rounded-xl shadow-lg hover:shadow-xl hover:-translate-y-0.5 transition-all flex items-center justify-center gap-2 group"
                         >
-                            <span>开启我的拾光之旅</span>
+                            <span>带我熟悉一下</span>
                             <Icons.ArrowRight size={16} className="group-hover:translate-x-1 transition-transform" />
                         </button>
                     </div>
@@ -279,29 +279,25 @@
             );
         };
 
-        // --- 新增：新手引导组件 ---
+        // --- 新手引导组件 ---
         const OnboardingGuide = ({ onClose }) => {
             const [step, setStep] = useState(0);
             
+            // 移除了重复的欢迎页，直接进入功能介绍
             const steps = [
                 {
-                    title: "👋 欢迎来到拾光胶囊",
-                    desc: "这是一个关于「时间」的容器。我们将一年拆解为 36 颗胶囊，每颗胶囊承载 10 天的记忆。",
-                    icon: <Icons.Hourglass size={48} className="text-indigo-500" />
-                },
-                {
                     title: "📍 寻找「当下」",
-                    desc: "系统会自动定位到当前日期的胶囊（高亮显示）。点击它，即可记录你的 OKR、灵感或碎碎念。",
+                    desc: "看到那个高亮跳动的胶囊了吗？那是你正在经历的『现在』。点击它，封存你的每一点滴。",
                     icon: <Icons.Target size={48} className="text-purple-500" />
                 },
                 {
-                    title: "☁️ 永不丢失",
-                    desc: "点击右上角的「登录/注册」，你的记忆将同步至云端。即使换手机，数据也依然在。",
+                    title: "☁️ 数据漫游",
+                    desc: "别让记忆丢失。点击右上角登录，无论在手机还是电脑，记忆永远跟随。",
                     icon: <Icons.LogIn size={48} className="text-amber-500" />
                 },
                 {
-                    title: "📊 见证成长",
-                    desc: "点击右上角的「卷轴」图标，随时查看你的年度填坑进度。祝你填满这一年！",
+                    title: "📊 见证轨迹",
+                    desc: "想知道这一年过得怎么样？点击右上角的「卷轴」图标，领取你的年度拾光小票。",
                     icon: <Icons.Trophy size={48} className="text-pink-500" />
                 }
             ];
